# CrxMem

./: .gitignore  README.md  upload_to_github.bat
CrxMem/: AddAddressDialog.cs  AntiCheatBypassForm.cs  App.xaml  App.xaml.cs  ChangeValueDialog.cs  CheatTable.cs  CrxDriverController.cs  CrxMem.csproj  DOCUMENTATION.md  DllInjectionTestForm.cs  EditAddressDialog.cs  FindAccessDialog.cs  LuaApiHelpWindow.xaml  LuaApiHelpWindow.xaml.cs  LuaEditorPrototype.cs  LuaEditorWindow.xaml  LuaEditorWindow.xaml.cs  LuaMonitorForm.cs  LuaScriptEditorForm.cs  MainWindow.xaml  MainWindow.xaml.cs  PEAnalysisForm.cs  ProcessSelectDialog.cs  README.md  SettingsForm.cs  SettingsManager.cs  ThemeManager.cs
CrxMem/Controls/: ModernControls.cs
CrxMem/Core/: AntiCheatDetector.cs  BookmarkManager.cs  BypassTestResult.cs  BypassTestRunner.cs  CommentManager.cs  DebugMonitor.cs  FastProcessWatcher.cs  HardwareBreakpointManager.cs  HtmlExporter.cs  KernelDriverManager.cs  LuaDetector.cs  MemoryRegion.cs  MemoryScanner.cs  PEAnalyzer.cs  ProcessAccess.cs  StealthInjector.cs  VEHSharedMemory.cs
CrxMem/Legacy/: MainForm.Designer.cs  MainForm.cs  MainForm.resx
CrxMem/LuaScripting/: LuaAddressListFunctions.cs  LuaAssemblerFunctions.cs  LuaDebugFunctions.cs  LuaEngine.cs  LuaGuiFunctions.cs  LuaMemoryFunctions.cs  LuaProcessFunctions.cs  (+2 more)
CrxShield/: CrxDriverController.cpp  CrxDriverController.h  CrxShield.inf  CrxShield.sln  CrxShield.vcxproj  README.md  driver.c
VEHDebugDll/: CMakeLists.txt  README.md  VEHDebug.cpp  VEHDebug.def  VEHDebug.h  VEHDebug32.vcxproj  VEHDebug64.vcxproj  build.bat
(+13 files in other folders)
